@@ -1,3 +1,7 @@
+* (25 May 2006)
+
+  Added account_location plugin hooks
+
 * (20 May 2006)
 
   New for Rails 1.1!
